Implements the "label-table" evaluation strategy.  Benchmark performance numbers are mostly unaffected, except for reverse, which got quite a bit worse under gc mode.
Running on magellanic.
------ Config refcnt-opt ------
reverse              0:05.13
tak                  0:01.97
rfib                 0:03.65
exp3_8               0:00.21
tree_insert          0:00.96
tree_insert_32       0:00.96
primes               0:02.43
queens               0:00.46
wheel_sieve1         0:00.27
wheel_sieve2         0:03.77
------ Config refcnt-lt-opt ------
reverse              0:05.33
tak                  0:01.91
rfib                 0:03.39
exp3_8               0:00.22
tree_insert          0:00.96
tree_insert_32       0:00.97
primes               0:02.56
queens               0:00.49
wheel_sieve1         0:00.29
wheel_sieve2         0:03.84
------ Config gc-opt ------
reverse              0:01.92
tak                  0:01.94
rfib                 0:03.37
exp3_8               0:00.09
tree_insert          0:01.49
tree_insert_32       0:01.47
primes               0:02.49
queens               0:00.32
wheel_sieve1         0:00.23
wheel_sieve2         0:01.73
------ Config gc-lt-opt ------
reverse              0:03.02
tak                  0:01.80
rfib                 0:02.89
exp3_8               0:00.15
tree_insert          0:01.39
tree_insert_32       0:01.43
primes               0:02.62
queens               0:00.31
wheel_sieve1         0:00.26
wheel_sieve2         0:01.71
------ Config ghc ------
reverse              0:08.70
tak                  0:00.03
rfib                 0:00.11
exp3_8               0:00.13
tree_insert          0:00.57
tree_insert_32       0:00.61
primes               0:00.70
queens               0:00.05
wheel_sieve1         0:00.04
wheel_sieve2         0:00.04
------ Config mcc ------
reverse              0:04.47
tak                  0:00.66
rfib                 0:02.69
exp3_8               0:00.17
tree_insert          (failed)
tree_insert_32       (failed)
primes  

--- a/config/README
+++ b/config/README
@@ -33,13 +33,23 @@ options to the compiler.  They are:
   SPRITE_GC_MODE
       Selects the garbage collection mode.  Possible values are:
           0
-              Use reference counting (default).
+              Use reference counting.
           1
-              Use gargabe collection.
+              Use gargabe collection (default).
           2
               Use crosschecked garbage collection; keep the reference count and
               assert that it is zero every time a node is reclaimed by the
               collector.
+
+  SPRITE_EXEC_MODE
+      Selects the execution strategy.  Possible values are:
+          0
+              Use the "function-table" strategy, which relies on a table of
+              function addresses and function calls for pattern matching
+              (default).
+          1
+              Use the "label-table" strategy, which relies on a table of jump
+              labels and goto* for pattern matching.
 
   TRACEREFS
       Traces every change to a reference count.
